# etl-tooling

./: .gitignore  README.md  README.rst  noxfile.py  pyproject.toml  requirements.txt  run-coverage-check.sh  run-pytest-system.sh  run-pytest-unit.sh
.github/workflows/: format-lint-pytest.yaml  python-app.yml
dc_etl/: __init__.py  assessor.py  combine.py  combine_preprocessors.py  component.py  config.py  dataset.py  errors.py  extract.py  fetch.py  filespec.py  load.py  pipeline.py  transform.py  transformers.py
dc_etl/assessors/: default.py
dc_etl/extractors/: netcdf.py
dc_etl/fetchers/: cpc.py
dc_etl/ipld/: loader.py  local_file.py
examples/: cli.py  cpc_global_precip.py  cpc_us_precip.py  cpc_us_precip.yaml
extractors/: cpc.py
tests/: conftest.py
tests/system/: conftest.py  test_assess.py  test_combine.py  test_transform.py
tests/system/extractors/: test_netcdf.py
tests/system/fetchers/: test_cpc.py
tests/system/pipelines/: cpc_us_precip.yaml  test_cpc.py
tests/unit/: conftest.py  test_assess.py  test_combine.py  test_combine_preprocessors.py  test_component.py  test_config.py  test_filespec.py  test_pipeline.py  test_transform.py  test_transformers.py
tests/unit/etc/: bad_extractor.yaml  bad_fetcher.yaml  config.yaml  cpc.yaml  datasets.yaml  fetcher_missing_name.yaml  missing_config.yaml  pipeline.yaml  pipeline_no_transformer.yaml
tests/unit/etc/some_folder/: README.txt
tests/unit/extractors/: test_netcdf.py
tests/unit/fetchers/: test_cpc.py
tests/unit/ipld/: test_loader.py  test_local_file.py
