# pyproject.toml
[project]
name = "dc-etl"
dynamic = ["version"]
authors = [
    { name = "Chris Rossi", email = "chris@christophermrossi.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Atmospheric Science"
]
description = "Tools for loading climate data into IPFS clusters"
readme = "README.rst"
keywords = ["Climate", "Zarr", "ETL", "IPFS"]
requires-python = ">=3.10"
dependencies = [
    "fsspec",
    "kerchunk[hdf]",
    "ipldstore @ git+https://github.com/dClimate/ipldstore@v2.1.3",
    "numpy",
    "pyyaml",
    "ujson",
    "xarray[io]",
]

[project.urls]
Homepage = "https://www.dclimate.net/"

[project.entry-points.fetcher]
cpc = "dc_etl.fetchers.cpc:CPCFetcher"
testing = "tests.unit.conftest:fetcher_entry_point"

[project.optional-dependencies]
testing = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
]
dev = [
    "black",
    "flake8",
    "flake8-pyproject",
    "nox",
]
doc = [
    "sphinx",
]
all = [
    "dc-etl[dev,testing,doc]",
]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
write_to = "dc_etl/_version.py"

[tool.black]
line-length = 119

[tool.flake8]
# flake8 and black disagree on E203, E701, and W503
ignore = ["E203", "E701", "W503"]
max-line-length = 119
